--- a/cut_tag_trial/conf/experiment.config
+++ b/cut_tag_trial/conf/experiment.config
@@ -1,22 +1,22 @@
 
 
 params {
-    data_remote = "staging/RNA_AMY"
-    experiment  = "arf1_rnaseq"
+    data_remote = "cut_tag_trial"
+    experiment  = "cut_tag_trial"
 
-    run_create_star_rsem_index = false 
+    run_create_star_rsem_index = false
     run_create_salmon_index    = false
     run_get_dropbox_data       = false
-    run_fastqc                 = false
+    run_fastqc                 = true
     run_trimmomatic            = false
-    run_rnaseq_rsem            = true
+    run_rnaseq_rsem            = false
     run_rnaseq_salmon          = false
     run_deseq_rsem             = false
     run_deseq_rsem_report      = false
     run_wormcat                = false
     run_overview_report        = false
 
-    fastq_single = "${launchDir}/data/fastq/**/*.fq.gz"
+    fastq_single = "${launchDir}/data/fastq/*.fastq.gz"
 
     trimmomatic_control='"HEADCROP:10"'
 
