cut and tag updates

--- a/cut_tag_trial/conf/experiment.config
+++ b/cut_tag_trial/conf/experiment.config
@@ -4,22 +4,18 @@ params {
     data_remote = "cut_tag_trial"
     experiment  = "cut_tag_trial"
 
-    run_create_star_rsem_index = false
-    run_create_salmon_index    = false
     run_get_dropbox_data       = false
-    run_fastqc                 = true
-    run_trimmomatic            = false
-    run_rnaseq_rsem            = false
-    run_rnaseq_salmon          = false
-    run_deseq_rsem             = false
-    run_deseq_rsem_report      = false
-    run_wormcat                = false
-    run_overview_report        = false
+    run_fastqc                 = false
+    run_trim_galore            = false
 
-    fastq_single = "${launchDir}/data/fastq/*.fastq.gz"
+    run_cut_and_tag            = true
 
-    trimmomatic_control='"HEADCROP:10"'
 
-    report_config = "${launchDir}/conf/experiment1.json"
+    fastq_paired = "${launchDir}/data/fastq/*_R{1,2}.fastq.gz"
+
+
+    genome = 'WBcel235'
+    //genome = 'ce10'
+    sample_sheet = "${launchDir}/conf/samplesheet.csv" 
 
 }
