Added helper commands

--- a/cut_tag_trial/conf/experiment.config
+++ b/cut_tag_trial/conf/experiment.config
@@ -1,20 +1,28 @@
 
 
 params {
-    data_remote = "cut_tag_trial"
-    experiment  = "cut_tag_trial"
-
-    run_get_dropbox_data       = false
-    run_fastqc                 = false
-    run_trim_galore            = false
-
-    run_cut_and_tag            = true
+    // TODO: Add back code to pull data
+    //data_remote = "cut_tag_trial"
+    //experiment  = "cut_tag_trial"
 
 
-    fastq_paired = "${launchDir}/data/fastq/*_R{1,2}.fastq.gz"
+    save_reference       = true
+    save_chromsize       = true //Save 
+    save_trimmed         = true //Save fastq.gz after trimming
+
+    // Alignment
+    save_unaligned       = true // Save fastq.gz before alignment
+    save_align_target    = true
+    save_align_spikein   = true
 
 
-    genome = 'WBcel235'
+    // Deduplication 
+    dedup_target_reads   = true
+    save_markdup_bam     = true
+    save_dedup_bam       = true
+    
+
+    //genome = 'WBcel235'
     //genome = 'ce10'
     sample_sheet = "${launchDir}/conf/samplesheet.csv" 
 
