EV_FB_MT_L6 run

--- a/cut_tag_trial/conf/experiment.config
+++ b/cut_tag_trial/conf/experiment.config
@@ -18,8 +18,8 @@ params {
 
     // Deduplication 
     dedup_target_reads   = true
-    save_markdup_bam     = true
-    save_dedup_bam       = true
+    save_markdup         = true
+    save_dedup           = true
     
 
     //genome = 'WBcel235'
